--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
                 color: rgb(240, 0, 0);
                 text-align: center;
-                font-size: 40px;
+                font-size: 70px;
                 padding-top: 250px;
             }
             #encore
@@ -38,15 +38,15 @@
         <p id = "sa"></p>
         <p onclick="window.location.reload()" id="encore">ENCORE !!</p>
         <script>
-            var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere"];
-            var verbe = ["joue", "mange", "tue", "saute"];
-            var compl = ["le chat", "du gateau", "la marelle", "du pont"];
+            var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere", "Jean-Pierre", "Malo", "Ivan", "Gabriel", "Sven", "Emile"];
+            var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole"];
+            var compl = ["le chat", "du gateau", "la marelle", "du pont", "l'islam", "la capote", "le noir", "la vie", "la Terre", "le pc", "les cours"];
 
             function rand(tableau){
                 return tableau[Math.floor(Math.random() * tableau.length)];
             }
 
-            var phraseAll = rand(sujet).toUpperCase() + " " + rand(verbe).toUpperCase() + " " + rand(compl).toUpperCase();
+            var phraseAll = rand(sujet).toUpperCase() + " " + rand(verbe).toUpperCase() + " " + rand(compl).toUpperCase() + "!";
 
             document.getElementById("sa").innerHTML = phraseAll;
         </script>
