--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <script>
             var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere", "Jean-Pierre", "Malo", "Ivan", "Gabriel", "Sven", "Emile"];
             var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole"];
-            var compl = ["le chat", "du gateau", "la marelle", "du pont", "l'islam", "la capote", "le noir", "la vie", "la Terre", "le pc", "les cours"];
+            var compl = ["le chat", "du gateau", "la marelle", "du pont", "l'islam", "la capote", "la vie", "la Terre", "le pc", "les cours", "les gens"];
 
             function rand(tableau){
                 return tableau[Math.floor(Math.random() * tableau.length)];
