--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <p onclick="window.location.reload()" id="encore">ENCORE !!</p>
         <script>
             var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere", "Jean-Pierre", "Malo", "Ivan", "Gabriel", "Sven", "Emile"];
-            var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole"];
-            var compl = ["le chat", "du gateau", "la marelle", "du pont", "la capote", "la vie", "la Terre", "le pc", "les cours", "les gens"];
+            var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole", "chante"];
+            var compl = ["le chat", "du gateau", "la marelle", "du pont", "la capote", "la vie", "la Terre", "le pc", "les cours", "les gens", "une chanson"];
 
             function rand(tableau){
                 return tableau[Math.floor(Math.random() * tableau.length)];
