--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>TITRE</title><!DOCTYPE html>
-
-<html>
-    <head>
-        <meta charset="UTF-8"/>
         <title>TITRE</title>
     </head>
 
@@ -43,58 +38,9 @@
         <p id = "sa"></p>
         <p onclick="window.location.reload()" id="encore">ENCORE !!</p>
         <script>
-            var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere", "Jean-Pierre", "Malo", "Ivan", "Gabriel", "Sven", "Emile"];
-            var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole", "chante"];
-            var compl = ["le chat", "du gateau", "la marelle", "du pont", "la capote", "la vie", "la Terre", "le pc", "les cours", "les gens", "une chanson"];
-
-            function rand(tableau){
-                return tableau[Math.floor(Math.random() * tableau.length)];
-            }
-
-            var phraseAll = rand(sujet).toUpperCase() + " " + rand(verbe).toUpperCase() + " " + rand(compl).toUpperCase() + "!";
-
-            document.("sa").innerHTML = phraseAll;
-        </script>
-    </body>
-</html>
-
-    </head>
-
-    <body>
-        <style>
-            body {
-                font-weight: bolder;
-                text-align: center;
-                overflow: hidden;
-                background: #000000;
-		    }
-            #sa
-            {
-                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                color: rgb(240, 0, 0);
-                text-align: center;
-                font-size: 70px;
-                padding-top: 250px;
-            }
-            #encore
-            {
-                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                color: rgb(0, 153, 255);
-                text-align: center;
-                font-size: 50px;
-                padding-top: 0px; 
-                border: 2px rgb(0, 153, 255) solid;
-                border-radius: 6px / 6px;
-                width: 20%;
-                margin: auto;
-            }
-        </style>
-        <p id = "sa"></p>
-        <p onclick="window.location.reload()" id="encore">ENCORE !!</p>
-        <script>
-            var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere", "Jean-Pierre", "Malo", "Ivan", "Gabriel", "Sven", "Emile"];
-            var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole", "chante", "endors", "souffle", "souffre", "snif", "enregistre"];
-            var compl = ["le chat", "du gateau", "la marelle", "du pont", "la capote", "la vie", "la Terre", "le pc", "les cours", "les gens", "une chanson", "le tableau", "le prof", "le jour", "sa maman", "le cube", "ma vie", "de la drogue"];
+            var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere", "Jean-Pierre", "Malo", "Ivan", "Gabriel", "Sven", "Emile", "Davy", "un chinois"];
+            var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole", "balance par la fenêtre"];
+            var compl = ["un chat", "un chinois", "la marelle", "des nouilles", "une capote", "une vieille", "la Terre", "un pc", "des cours", "des gens", "un monsieur", "la prof de français", "un grand-père", "un chien"];
 
             function rand(tableau){
                 return tableau[Math.floor(Math.random() * tableau.length)];
