--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <p onclick="window.location.reload()" id="encore">ENCORE !!</p>
         <script>
             var sujet = ["Jelane", "Le monsieur","La dame", "Le chien", "Ta mere", "Jean-Pierre", "Malo", "Ivan", "Gabriel", "Sven", "Emile", "Davy", "un chinois"];
-            var verbe = ["joue", "mange", "tue", "saute", "suce", "baise", "viol", "decapite", "convertie", "encule", "sodomise", "vole", "balance par la fenêtre"];
-            var compl = ["un chat", "un chinois", "la marelle", "des nouilles", "une capote", "une vieille", "la Terre", "un pc", "des cours", "des gens", "un monsieur", "la prof de français", "un grand-père", "un chien"];
+            var verbe = ["mange", "tue", "saute", "suce", "baise", "viol", "decapite", "encule", "sodomise", "vole", "balance par la fenêtre"];
+            var compl = ["un chat", "un chinois", "la marelle", "des nouilles", "une capote", "une vieille", "un pc", "des cours", "des gens", "un monsieur", "la prof de français", "un grand-père", "un chien"];
 
             function rand(tableau){
                 return tableau[Math.floor(Math.random() * tableau.length)];
